# planecomp

./: CMakeLists.txt  FindLibRaw.cmake  LICENSE.md  README.md  main.cc  raw.cc  raw.h  slic.cc
image/: CMakeLists.txt
image/include/: image.h
image/src/: image_io.cc  image_manip.cc
